{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 140,
  "lineage": "87605e1a-14c5-1560-d9e3-5c9f40e157b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arvan_sre_ec2_k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:730335442118:instance/i-034adaeb0c5d88357",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034adaeb0c5d88357",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "arvan_sre_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ba9695b40cab59e",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.121",
            "public_ip": "44.200.125.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e15274c23112025c",
                "volume_size": 14,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078acdc902a70487e",
            "tags": {
              "Name": "ec2_k8s_master_arvan_sre",
              "Role": "control_plane, master"
            },
            "tags_all": {
              "Name": "ec2_k8s_master_arvan_sre",
              "Role": "control_plane, master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f4ef47c9dc276aa",
              "sg-0b15a86f0d11830f1",
              "sg-0c4984ff7a3d7319c"
            ]
          },
          "dependencies": [
            "aws_key_pair.arvan_sre_ssh_keypair",
            "aws_security_group.arvan_sre_security_group_common",
            "aws_security_group.arvan_sre_security_group_k8s_control_plane",
            "aws_security_group.arvan_sre_security_group_k8s_flannel",
            "aws_subnet.arvan_sre_subnet",
            "aws_vpc.arvan_sre_vpc",
            "tls_private_key.arvan_sre_ssh_rsa_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arvan_sre_ec2_k8s_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:730335442118:instance/i-0bbc503de9417996b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbc503de9417996b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arvan_sre_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a68ec2316cd8637",
            "private_dns": "ip-10-0-1-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "public_ip": "44.200.248.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c679d20dd882f86a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078acdc902a70487e",
            "tags": {
              "Name": "ec2_k8s_worker_0_arvan_sre",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "ec2_k8s_worker_0_arvan_sre",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f4ef47c9dc276aa",
              "sg-08a724d95d0b66ed4",
              "sg-0b15a86f0d11830f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.arvan_sre_ssh_keypair",
            "aws_security_group.arvan_sre_security_group_common",
            "aws_security_group.arvan_sre_security_group_k8s_flannel",
            "aws_security_group.arvan_sre_security_group_k8s_worker_nodes",
            "aws_subnet.arvan_sre_subnet",
            "aws_vpc.arvan_sre_vpc",
            "tls_private_key.arvan_sre_ssh_rsa_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:730335442118:instance/i-0d4ce5cc950c3a1a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4ce5cc950c3a1a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arvan_sre_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f2ebc6dac880c9d",
            "private_dns": "ip-10-0-1-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.123",
            "public_ip": "44.200.245.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed8c4064c054739c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078acdc902a70487e",
            "tags": {
              "Name": "ec2_k8s_worker_1_arvan_sre",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "ec2_k8s_worker_1_arvan_sre",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f4ef47c9dc276aa",
              "sg-08a724d95d0b66ed4",
              "sg-0b15a86f0d11830f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.arvan_sre_ssh_keypair",
            "aws_security_group.arvan_sre_security_group_common",
            "aws_security_group.arvan_sre_security_group_k8s_flannel",
            "aws_security_group.arvan_sre_security_group_k8s_worker_nodes",
            "aws_subnet.arvan_sre_subnet",
            "aws_vpc.arvan_sre_vpc",
            "tls_private_key.arvan_sre_ssh_rsa_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arvan_sre_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:internet-gateway/igw-0fd2c7f3cc2086a83",
            "id": "igw-0fd2c7f3cc2086a83",
            "owner_id": "730335442118",
            "tags": {
              "Name": "igw_arvan_sre"
            },
            "tags_all": {
              "Name": "igw_arvan_sre"
            },
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "dependencies": [
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arvan_sre_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:route-table/rtb-017430885ad01d18d",
            "id": "rtb-017430885ad01d18d",
            "owner_id": "730335442118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd2c7f3cc2086a83",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_arvan_sre"
            },
            "tags_all": {
              "Name": "rt_arvan_sre"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arvan_sre_internet_gateway",
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arvan_sre_rt_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aff6d7b1feb51fb",
            "route_table_id": "rtb-017430885ad01d18d",
            "subnet_id": "subnet-078acdc902a70487e"
          },
          "dependencies": [
            "aws_internet_gateway.arvan_sre_internet_gateway",
            "aws_route_table.arvan_sre_route_table",
            "aws_subnet.arvan_sre_subnet",
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arvan_sre_security_group_common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:security-group/sg-06f4ef47c9dc276aa",
            "description": "Allow SSH/HTTP/HTTPS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f4ef47c9dc276aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_common_arvan_sre",
            "name_prefix": "",
            "owner_id": "730335442118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_common_arvan_sre"
            },
            "tags_all": {
              "Name": "sg_common_arvan_sre"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arvan_sre_security_group_k8s_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:security-group/sg-0c4984ff7a3d7319c",
            "description": "K8S Control Plane Security Group",
            "egress": [],
            "id": "sg-0c4984ff7a3d7319c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Etcd server client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Contoller Manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "sg_k8s_cp_arvan_sre",
            "name_prefix": "",
            "owner_id": "730335442118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_k8s_cp_arvan_sre"
            },
            "tags_all": {
              "Name": "sg_k8s_cp_arvan_sre"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arvan_sre_security_group_k8s_flannel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:security-group/sg-0b15a86f0d11830f1",
            "description": "K8S Flannel Overlay backend",
            "egress": [],
            "id": "sg-0b15a86f0d11830f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel overlay backend",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel vxlan backend",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "sg_k8s_flnl_arvan_sre",
            "name_prefix": "",
            "owner_id": "730335442118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_k8s_flnl_arvan_sre"
            },
            "tags_all": {
              "Name": "sg_k8s_flnl_arvan_sre"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arvan_sre_security_group_k8s_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:security-group/sg-08a724d95d0b66ed4",
            "description": "K8S Worker Nodes Security Group",
            "egress": [],
            "id": "sg-08a724d95d0b66ed4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Proxy",
                "from_port": 10256,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10256
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Servicest",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "sg_k8s_wn_arvan_sre",
            "name_prefix": "",
            "owner_id": "730335442118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_k8s_wn_arvan_sre"
            },
            "tags_all": {
              "Name": "sg_k8s_wn_arvan_sre"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arvan_sre_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:subnet/subnet-078acdc902a70487e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078acdc902a70487e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335442118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_arvan_sre"
            },
            "tags_all": {
              "Name": "subnet_arvan_sre"
            },
            "vpc_id": "vpc-0d02d51966cd9c8cb"
          },
          "dependencies": [
            "aws_vpc.arvan_sre_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arvan_sre_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335442118:vpc/vpc-0d02d51966cd9c8cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fb218a0b67f41db",
            "default_route_table_id": "rtb-079afa7a8c1a85ea1",
            "default_security_group_id": "sg-0c388c63ec174a3f0",
            "dhcp_options_id": "dopt-0b0ad836ea32776e6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d02d51966cd9c8cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079afa7a8c1a85ea1",
            "owner_id": "730335442118",
            "tags": {
              "Name": "vpc_arvan_sre"
            },
            "tags_all": {
              "Name": "vpc_arvan_sre"
            }
          }
        }
      ]
    }
  ]
}